// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createPluginProject creates a backend plugin project 1`] = `
[
  [
    ".eslintrc.js",
    "module.exports = require('@backstage/cli/config/eslint-factory')(__dirname);
",
  ],
  [
    ".yarnrc.yml",
    "nodeLinker: node-modules
",
  ],
  [
    "README.md",
    "# example-plugin

Replace this text with a description of your plugin backend.

## Development

Start the plugin backend in standalone mode:

\`\`\`bash
yarn start
\`\`\`

This runs the plugin without a full RHDH instance, which is useful for
iterating on the plugin logic in isolation.


## RHDH dynamic plugin export

Export this plugin for RHDH without adding the CLI as a dependency:

\`\`\`bash
npx @red-hat-developer-hub/cli plugin export
\`\`\`
",
  ],
  [
    "backstage.json",
    "{
  "version": "1.54.6"
}
",
  ],
  [
    "package.json",
    "{
  "name": "@internal/backstage-plugin-example-plugin",
  "main": "src/index.ts",
  "types": "src/index.ts",
  "publishConfig": {
    "access": "public",
    "main": "dist/index.cjs.js",
    "types": "dist/index.d.ts"
  },
  "backstage": {
    "role": "backend-plugin",
    "pluginId": "example-plugin"
  },
  "scripts": {
    "start": "backstage-cli package start",
    "build": "backstage-cli package build",
    "lint": "backstage-cli package lint",
    "test": "backstage-cli package test",
    "clean": "backstage-cli package clean",
    "prepack": "backstage-cli package prepack",
    "postpack": "backstage-cli package postpack"
  },
  "dependencies": {
    "@backstage/backend-defaults": "0.12.5",
    "@backstage/backend-plugin-api": "1.10.0",
    "@backstage/catalog-client": "1.10.0",
    "@backstage/errors": "1.3.1",
    "@backstage/types": "1.2.2",
    "@backstage/plugin-catalog-node": "2.2.4",
    "express": "4.17.1",
    "express-promise-router": "4.1.0",
    "zod": "^3.25.76 || ^4.0.0"
  },
  "devDependencies": {
    "@backstage/backend-test-utils": "1.11.5",
    "@backstage/cli": "0.36.5",
    "@types/express": "4.17.6",
    "@types/supertest": "2.0.12",
    "supertest": "6.2.4",
    "@backstage/cli-defaults": "0.1.5",
    "jest": "^29.7.0",
    "jest-environment-jsdom": "^29.7.0",
    "@types/jest": "^29.5.14",
    "typescript": "5.4.5"
  },
  "files": [
    "dist"
  ],
  "packageManager": "yarn@4.17.1",
  "resolutions": {
    "@types/express": "4.17.21"
  }
}
",
  ],
  [
    "tsconfig.json",
    "{
  "extends": "@backstage/cli/config/tsconfig.json",
  "include": [
    "src",
    "dev",
    "migrations"
  ],
  "compilerOptions": {
    "jsx": "react-jsx",
    "outDir": "dist-types",
    "rootDir": "."
  }
}
",
  ],
  [
    "src/plugin.ts",
    "import {
  coreServices,
  createBackendPlugin,
} from '@backstage/backend-plugin-api';
import { createRouter } from './router';
import { todoListServiceRef } from './services/TodoListService';

/**
 * examplePluginPlugin backend plugin
 *
 * @public
 */
export const examplePluginPlugin = createBackendPlugin({
  pluginId: 'example-plugin',
  register(env) {
    env.registerInit({
      deps: {
        httpAuth: coreServices.httpAuth,
        httpRouter: coreServices.httpRouter,
        todoList: todoListServiceRef,
      },
      async init({ httpAuth, httpRouter, todoList }) {
        httpRouter.use(
          await createRouter({
            httpAuth,
            todoList,
          }),
        );
      },
    });
  },
});
",
  ],
  [
    "src/router.ts",
    "import { HttpAuthService } from '@backstage/backend-plugin-api';
import { InputError } from '@backstage/errors';
import { z } from 'zod/v3';
import express from 'express';
import Router from 'express-promise-router';
import { todoListServiceRef } from './services/TodoListService';

export async function createRouter({
  httpAuth,
  todoList,
}: {
  httpAuth: HttpAuthService;
  todoList: typeof todoListServiceRef.T;
}): Promise<express.Router> {
  const router = Router();
  router.use(express.json());

  // TEMPLATE NOTE:
  // Zod is a powerful library for data validation and recommended in particular
  // for user-defined schemas. In this case we use it for input validation too.
  //
  // If you want to define a schema for your API we recommend using Backstage's
  // OpenAPI tooling: https://backstage.io/docs/next/openapi/01-getting-started
  const todoSchema = z.object({
    title: z.string(),
    entityRef: z.string().optional(),
  });

  router.post('/todos', async (req, res) => {
    const parsed = todoSchema.safeParse(req.body);
    if (!parsed.success) {
      throw new InputError(parsed.error.toString());
    }

    const result = await todoList.createTodo(parsed.data, {
      credentials: await httpAuth.credentials(req, { allow: ['user'] }),
    });

    res.status(201).json(result);
  });

  router.get('/todos', async (_req, res) => {
    res.json(await todoList.listTodos());
  });

  router.get('/todos/:id', async (req, res) => {
    res.json(await todoList.getTodo({ id: req.params.id }));
  });

  return router;
}
",
  ],
]
`;

exports[`createPluginProject creates a catalog-processor-module plugin project 1`] = `
[
  [
    ".eslintrc.js",
    "module.exports = require('@backstage/cli/config/eslint-factory')(__dirname);
",
  ],
  [
    ".yarnrc.yml",
    "nodeLinker: node-modules
",
  ],
  [
    "README.md",
    "# @internal/backstage-plugin-example-plugin

The example-plugin-processor module for the RHDH Software Catalog.


## RHDH dynamic plugin export

Export this plugin for RHDH without adding the CLI as a dependency:

\`\`\`bash
npx @red-hat-developer-hub/cli plugin export
\`\`\`
",
  ],
  [
    "backstage.json",
    "{
  "version": "1.54.6"
}
",
  ],
  [
    "package.json",
    "{
  "name": "@internal/backstage-plugin-example-plugin",
  "description": "The example-plugin-processor module for @backstage/plugin-catalog-backend",
  "main": "src/index.ts",
  "types": "src/index.ts",
  "publishConfig": {
    "access": "public",
    "main": "dist/index.cjs.js",
    "types": "dist/index.d.ts"
  },
  "backstage": {
    "role": "backend-plugin-module",
    "pluginId": "catalog",
    "pluginPackage": "@backstage/plugin-catalog-backend"
  },
  "scripts": {
    "start": "backstage-cli package start",
    "build": "backstage-cli package build",
    "lint": "backstage-cli package lint",
    "test": "backstage-cli package test",
    "clean": "backstage-cli package clean",
    "prepack": "backstage-cli package prepack",
    "postpack": "backstage-cli package postpack"
  },
  "dependencies": {
    "@backstage/backend-plugin-api": "1.10.0",
    "@backstage/catalog-model": "1.10.0",
    "@backstage/config": "1.3.8",
    "@backstage/plugin-catalog-node": "2.2.4"
  },
  "devDependencies": {
    "@backstage/cli": "0.36.5",
    "@backstage/backend-test-utils": "1.11.5",
    "@backstage/cli-defaults": "0.1.5",
    "jest": "^29.7.0",
    "jest-environment-jsdom": "^29.7.0",
    "@types/jest": "^29.5.14",
    "typescript": "5.4.5"
  },
  "files": [
    "dist"
  ],
  "packageManager": "yarn@4.17.1",
  "resolutions": {
    "@types/express": "4.17.21"
  }
}
",
  ],
  [
    "tsconfig.json",
    "{
  "extends": "@backstage/cli/config/tsconfig.json",
  "include": [
    "src",
    "dev",
    "migrations"
  ],
  "compilerOptions": {
    "jsx": "react-jsx",
    "outDir": "dist-types",
    "rootDir": "."
  }
}
",
  ],
  [
    "src/module.ts",
    "import {
  coreServices,
  createBackendModule,
} from '@backstage/backend-plugin-api';
import { catalogProcessingExtensionPoint } from '@backstage/plugin-catalog-node';
import { ExamplePluginProcessor } from './processor/ExamplePluginProcessor';

export const catalogModuleExamplePlugin = createBackendModule({
  pluginId: 'catalog',
  moduleId: 'example-plugin-processor',
  register({ registerInit }) {
    registerInit({
      deps: {
        config: coreServices.rootConfig,
        catalog: catalogProcessingExtensionPoint,
      },
      async init({ catalog, config }) {
        catalog.addProcessor(ExamplePluginProcessor.fromConfig(config));
      },
    });
  },
});
",
  ],
]
`;

exports[`createPluginProject creates a frontend plugin project 1`] = `
[
  [
    ".eslintrc.js",
    "module.exports = require('@backstage/cli/config/eslint-factory')(__dirname);
",
  ],
  [
    ".yarnrc.yml",
    "nodeLinker: node-modules
",
  ],
  [
    "README.md",
    "# example-plugin

Replace this text with a description of your plugin.

## Development

Serve the plugin in isolation with the local dev harness:

\`\`\`bash
yarn start
\`\`\`

This starts a standalone development server without requiring a full RHDH instance. The setup for it is in the [./dev](./dev) directory.


## RHDH dynamic plugin export

Export this plugin for RHDH without adding the CLI as a dependency:

\`\`\`bash
npx @red-hat-developer-hub/cli plugin export
\`\`\`
",
  ],
  [
    "backstage.json",
    "{
  "version": "1.54.6"
}
",
  ],
  [
    "package.json",
    "{
  "name": "@internal/backstage-plugin-example-plugin",
  "main": "src/index.ts",
  "types": "src/index.ts",
  "publishConfig": {
    "access": "public",
    "main": "dist/index.esm.js",
    "types": "dist/index.d.ts"
  },
  "backstage": {
    "role": "frontend-plugin",
    "pluginId": "example-plugin"
  },
  "sideEffects": false,
  "scripts": {
    "start": "backstage-cli package start",
    "build": "backstage-cli package build",
    "lint": "backstage-cli package lint",
    "test": "backstage-cli package test",
    "clean": "backstage-cli package clean",
    "prepack": "backstage-cli package prepack",
    "postpack": "backstage-cli package postpack"
  },
  "dependencies": {
    "@backstage/core-components": "0.17.0",
    "@backstage/frontend-plugin-api": "0.17.2",
    "@backstage/theme": "0.6.0",
    "@backstage/ui": "0.10.0",
    "react-use": "17.2.4"
  },
  "peerDependencies": {
    "react": "^16.13.1 || ^17.0.0 || ^18.0.0"
  },
  "devDependencies": {
    "@backstage/cli": "0.36.5",
    "@backstage/frontend-dev-utils": "0.4.5",
    "@backstage/frontend-defaults": "0.1.0",
    "@backstage/frontend-test-utils": "0.2.0",
    "@testing-library/jest-dom": "6.0.0",
    "@testing-library/react": "^16.0.0",
    "@testing-library/user-event": "14.0.0",
    "msw": "^2",
    "react": "^16.13.1 || ^17.0.0 || ^18.0.0",
    "@backstage/cli-defaults": "0.1.5",
    "jest": "^29.7.0",
    "jest-environment-jsdom": "^29.7.0",
    "@types/jest": "^29.5.14",
    "typescript": "5.4.5",
    "@types/react": "^18.0.0",
    "@types/react-dom": "^18.0.0",
    "react-dom": "^18.0.0",
    "react-router-dom": "^6.30.2"
  },
  "files": [
    "dist"
  ],
  "jest": {
    "testEnvironmentOptions": {
      "customExportConditions": [
        "node",
        "node-addons"
      ]
    }
  },
  "packageManager": "yarn@4.17.1",
  "resolutions": {
    "@types/express": "4.17.21"
  }
}
",
  ],
  [
    "tsconfig.json",
    "{
  "extends": "@backstage/cli/config/tsconfig.json",
  "include": [
    "src",
    "dev",
    "migrations"
  ],
  "compilerOptions": {
    "jsx": "react-jsx",
    "outDir": "dist-types",
    "rootDir": "."
  }
}
",
  ],
  [
    "src/plugin.tsx",
    "import {
  createFrontendPlugin,
  PageBlueprint,
} from '@backstage/frontend-plugin-api';

import { rootRouteRef } from './routes';

export const page = PageBlueprint.make({
  params: {
    path: '/example-plugin',
    routeRef: rootRouteRef,
    loader: () =>
      import('./components/TodoPage').then(m => (
        <m.TodoPage />
      )),
  },
});

export const examplePluginPlugin = createFrontendPlugin({
  pluginId: 'example-plugin',
  extensions: [page],
  routes: {
    root: rootRouteRef,
  }
});
",
  ],
  [
    "src/routes.ts",
    "import { createRouteRef } from '@backstage/frontend-plugin-api';

export const rootRouteRef = createRouteRef();
",
  ],
  [
    "src/components/TodoPage/TodoPage.tsx",
    "import { Progress } from '@backstage/core-components';
import {
  useApi,
  fetchApiRef,
} from '@backstage/frontend-plugin-api';
import { Header, Container } from '@backstage/ui';
import useAsync from 'react-use/esm/useAsync';
import { TodoList } from '../TodoList';
import type { TodoItem } from '../TodoList';

const exampleTodos: TodoItem[] = [
  { id: '1', title: 'Install the backend plugin', createdBy: 'user:default/guest', createdAt: new Date().toISOString() },
  { id: '2', title: 'Connect the frontend to real data', createdBy: 'user:default/guest', createdAt: new Date().toISOString() },
];

// TEMPLATE NOTE:
// This is a simple example of fetching data from the backend plugin.
// You can replace this with your own data fetching logic or use a
// generated client from an OpenAPI schema.
function useTodos() {
  const { fetch } = useApi(fetchApiRef);

  return useAsync(async (): Promise<TodoItem[]> => {
    const response = await fetch(\`plugin://example-plugin/todos\`);

    if (!response.ok) {
      throw new Error(
        \`Failed to fetch todos: \${response.status} \${response.statusText}\`,
      );
    }

    const data = await response.json();
    return data.items;
  }, [fetch]);
}

export const TodoPage = () => {
  const { value: todos, loading, error } = useTodos();

  if (loading) {
    return <Progress />;
  }

  return (
    <>
      <Header title="Welcome to example-plugin!" />
      <Container>
        <TodoList todos={error ? exampleTodos : (todos ?? [])} />
      </Container>
    </>
  );
};
",
  ],
  [
    "dev/index.tsx",
    "import { createDevApp } from '@backstage/frontend-dev-utils';

import plugin from '../src';

createDevApp({ features: [plugin] });
",
  ],
]
`;
